--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "codemod-cli": "^0.2.10"
   },
   "devDependencies": {
+    "ember-template-lint": "^1.1.0",
     "jest": "^24.1.0"
   },
   "jest": {
